# cnes

./: .gitignore  CMakeLists.txt  bus.h  cpu.c  cpu.h  ines.c  ines.h  main.c  mapper.h  ppu.c  ppu.h
include/: bus.h  main.h  mirroring.h
include/apu/: apu.h  apu_bitfields.h  dmc.h  noise.h  pulse.h  triangle.h
include/cartridge/: ines.h
include/cartridge/mapper/: mapper.h  mapper_001.h  mapper_002.h  mapper_003.h
include/controller/: controller.h
include/cpu/: cpu.h
include/frontend/: audio.h  input.h  sdl_context.h  text.h  video.h
include/input/: input.h
include/ppu/: ppu.h  rendering.h
include/utils/: constants.h  ring_buffer.h
src/: bus.c  bus.h  cartridge.c  cartridge.h  main.c  mapper.c  ppu.c  ppu.h
src/apu/: apu.c  dmc.c  noise.c  pulse.c  triangle.c
src/cartridge/: cartridge.c  cartridge.h  ines.c  mapper.c
src/cartridge/mapper/: mapper.c  mapper.h  mapper_000.c  mapper_000.h  mapper_001.c  mapper_001.h  mapper_002.c  mapper_002.h  mapper_003.c
src/controller/: controller.c
src/cpu/: addressing_modes.c  addressing_modes.h  cpu.c  cpu.h  instructions.c  instructions.h
src/frontend/: audio.c  input.c  sdl_context.c  text.c  video.c
src/input/: input.c
src/ppu/: ppu.c  ppu.h  rendering.c  rendering.h
src/utils/: fixedset.c  fixedset.h  ring_buffer.c
